// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button slot 1`] = `
<div class="ghb-submit-bar">
  <div class="ghb-submit-bar__bar">Custom button</div>
</div>
`;

exports[`button-color prop 1`] = `
<div class="ghb-submit-bar">
  <div class="ghb-submit-bar__bar"><button class="ghb-button ghb-button--danger ghb-button--normal ghb-button--round ghb-submit-bar__button ghb-submit-bar__button--danger" style="color: white; background: red; border-color: red;">
      <div class="ghb-button__content"></div>
    </button></div>
</div>
`;

exports[`decimal-length prop 1`] = `
<div class="ghb-submit-bar">
  <div class="ghb-submit-bar__bar">
    <div class="ghb-submit-bar__text"><span>合计：</span><span class="ghb-submit-bar__price">¥<span class="ghb-submit-bar__price ghb-submit-bar__price--integer">1</span>.1</span></div><button class="ghb-button ghb-button--danger ghb-button--normal ghb-button--round ghb-submit-bar__button ghb-submit-bar__button--danger">
      <div class="ghb-button__content"></div>
    </button>
  </div>
</div>
`;

exports[`disable safe-area-inset-bottom prop 1`] = `
<div class="ghb-submit-bar ghb-submit-bar--unfit">
  <div class="ghb-submit-bar__bar"><button class="ghb-button ghb-button--danger ghb-button--normal ghb-button--round ghb-submit-bar__button ghb-submit-bar__button--danger">
      <div class="ghb-button__content"></div>
    </button></div>
</div>
`;

exports[`disable submit 1`] = `
<div class="ghb-submit-bar">
  <div class="ghb-submit-bar__bar">
    <div class="ghb-submit-bar__text"><span>合计：</span><span class="ghb-submit-bar__price">¥<span class="ghb-submit-bar__price ghb-submit-bar__price--integer">0</span>.01</span></div><button disabled="disabled" class="ghb-button ghb-button--danger ghb-button--normal ghb-button--disabled ghb-button--round ghb-submit-bar__button ghb-submit-bar__button--danger">
      <div class="ghb-button__content"></div>
    </button>
  </div>
</div>
`;

exports[`suffix-label prop 1`] = `
<div class="ghb-submit-bar">
  <div class="ghb-submit-bar__bar">
    <div class="ghb-submit-bar__text"><span>Label</span><span class="ghb-submit-bar__price">¥<span class="ghb-submit-bar__price ghb-submit-bar__price--integer">1</span>.11</span><span class="ghb-submit-bar__suffix-label">Suffix Label</span></div><button class="ghb-button ghb-button--danger ghb-button--normal ghb-button--round ghb-submit-bar__button ghb-submit-bar__button--danger">
      <div class="ghb-button__content"></div>
    </button>
  </div>
</div>
`;

exports[`text-align prop 1`] = `
<div class="ghb-submit-bar">
  <div class="ghb-submit-bar__bar">
    <div class="ghb-submit-bar__text" style="text-align: left;"><span>合计：</span><span class="ghb-submit-bar__price">¥<span class="ghb-submit-bar__price ghb-submit-bar__price--integer">1</span>.11</span></div><button class="ghb-button ghb-button--danger ghb-button--normal ghb-button--round ghb-submit-bar__button ghb-submit-bar__button--danger">
      <div class="ghb-button__content"></div>
    </button>
  </div>
</div>
`;

exports[`top slot 1`] = `
<div class="ghb-submit-bar">Custom Top<div class="ghb-submit-bar__bar"><button class="ghb-button ghb-button--danger ghb-button--normal ghb-button--round ghb-submit-bar__button ghb-submit-bar__button--danger">
      <div class="ghb-button__content"></div>
    </button></div>
</div>
`;

exports[`without price 1`] = `
<div class="ghb-submit-bar">
  <div class="ghb-submit-bar__bar"><button class="ghb-button ghb-button--danger ghb-button--normal ghb-button--round ghb-submit-bar__button ghb-submit-bar__button--danger">
      <div class="ghb-button__content"></div>
    </button></div>
</div>
`;
